force-app/main/default/objects/Contract_Request__c/Contract_Request__c.object-meta.xml
<CustomObject>
    <label>Contract Request</label>
    <nameField>
        <label>Contract Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>