force-app/main/default/objects/Contract_Request__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <formula>Owner:User.FirstName&amp;&quot; &quot;&amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Executive</label>
    <type>Text</type>
</CustomField>