force-app/main/default/objects/Contract_Request__c/fields/Activation__c.field-meta.xml
<CustomField>
    <fullName>Activation__c</fullName>
    <label>Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>