force-app/main/default/objects/Contract_Request__c/fields/Activation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Activation_Fee__c</fullName>
    <label>Activation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>