force-app/main/default/objects/Contract_Request__c/fields/ADDING_TLS_EFAX_SECURE_OR_PORTING__c.field-meta.xml
<CustomField>
    <fullName>ADDING_TLS_EFAX_SECURE_OR_PORTING__c</fullName>
    <label>ADDING TLS, EFAX SECURE OR PORTING?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>