force-app/main/default/objects/Contract_Request__c/fields/Additional_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Additional_Numbers__c</fullName>
    <label>Additional Numbers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>