force-app/main/default/objects/Contract_Request__c/fields/Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_by__c</fullName>
    <label>Approved by</label>
    <length>40</length>
    <type>Text</type>
</CustomField>