force-app/main/default/objects/Contract_Request__c/fields/Autorenewal__c.field-meta.xml
<CustomField>
    <fullName>Autorenewal__c</fullName>
    <label>Autorenewal?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>