force-app/main/default/objects/Contract_Request__c/fields/Company_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip_Code__c</fullName>
    <label>Company Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>