force-app/main/default/objects/Contract_Request__c/fields/Conga_eFax_Email_Contract_to_Legal_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_eFax_Email_Contract_to_Legal_URL__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateId=a1L60000002wfOI&quot; +
&quot;&amp;emailsubject=&quot;+  Account__r.Name  +
&quot;&amp;emailadditionalto=arun.reddy@j2.com,eFaxLegal@j2.com&quot; +
&quot;&amp;EmailCC=&quot;+ Owner:User.Email +
&quot;&amp;QMode=3&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Email eFax Contract to Legal URL</label>
    <type>Text</type>
</CustomField>