force-app/main/default/objects/Contract_Request__c/fields/Conga_Email_eFax_Contract_to_EU_Legal__c.field-meta.xml
<CustomField>
    <fullName>Conga_Email_eFax_Contract_to_EU_Legal__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateId=a1L60000002wfOI&quot; +
&quot;&amp;emailsubject=&quot;+ Account__r.Name +
&quot;&amp;emailadditionalto=eadaoin.moran@j2.com,donna.nelis@j2.com&quot; +
&quot;&amp;EmailCC=&quot;+ Owner:User.Email +
&quot;&amp;QMode=3&quot;</formula>
    <label>Conga Email eFax Contract to EU Legal</label>
    <type>Text</type>
</CustomField>