force-app/main/default/objects/Contract_Request__c/fields/Conga_Email_eFax_Corp_SOF_to_EU_Legal__c.field-meta.xml
<CustomField>
    <fullName>Conga_Email_eFax_Corp_SOF_to_EU_Legal__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;templateId=a1L32000005Hm60&quot; + 
&quot;&amp;emailsubject=&quot;+ Account__r.Name + 
&quot;&amp;emailadditionalto=eadaoin.moran@j2.com,donna.nelis@j2.com,&quot;+
&quot;&amp;EmailCC=&quot;+ Owner:User.Email +
&quot;&amp;QMode=3&quot;</formula>
    <label>Conga Email eFax Corp SOF to EU Legal</label>
    <type>Text</type>
</CustomField>