force-app/main/default/objects/Contract_Request__c/fields/Conga_Workflow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Conga_Workflow_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conga Workflow Trigger</label>
    <type>Checkbox</type>
</CustomField>