force-app/main/default/objects/Contract_Request__c/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <description>Sales rep will enter contract Value. Needed for SFSD-270</description>
    <label>Contract Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>