force-app/main/default/objects/Contract_Request__c/fields/Customer_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_Date__c</fullName>
    <description>This field captures Customer Signed Date</description>
    <label>Customer Signed Date</label>
    <type>Date</type>
</CustomField>