force-app/main/default/objects/Contract_Request__c/fields/Date_Amendment_Term_Begins__c.field-meta.xml
<CustomField>
    <fullName>Date_Amendment_Term_Begins__c</fullName>
    <inlineHelpText>Must be the first day of the month.</inlineHelpText>
    <label>Date Amendment Term Begins</label>
    <type>Date</type>
</CustomField>