force-app/main/default/objects/Contract_Request__c/fields/Date_of_Original_Contract__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Original_Contract__c</fullName>
    <label>Date of Original Contract</label>
    <type>Date</type>
</CustomField>