force-app/main/default/objects/Contract_Request__c/fields/Description_of_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Amendment__c</fullName>
    <label>Description of Amendment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>