force-app/main/default/objects/Contract_Request__c/fields/EFax_Secure__c.field-meta.xml
<CustomField>
    <fullName>EFax_Secure__c</fullName>
    <label>EFax Secure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>