force-app/main/default/objects/Contract_Request__c/fields/Effective_Date_of_the_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_the_Amendment__c</fullName>
    <label>Effective Date of the Amendment</label>
    <type>Date</type>
</CustomField>