force-app/main/default/objects/Contract_Request__c/fields/Expiration_Date_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_of_Contract__c</fullName>
    <description>Expiration date of contract. Needed for SFSD-270</description>
    <label>Expiration Date of Contract</label>
    <type>Date</type>
</CustomField>