force-app/main/default/objects/Contract_Request__c/fields/Fine_Mode_AND_High_Priority__c.field-meta.xml
<CustomField>
    <fullName>Fine_Mode_AND_High_Priority__c</fullName>
    <label>Fine Mode AND High Priority</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>