force-app/main/default/objects/Contract_Request__c/fields/Fine_Mode_or_High_Priority_or_Barcoding__c.field-meta.xml
<CustomField>
    <fullName>Fine_Mode_or_High_Priority_or_Barcoding__c</fullName>
    <label>Fine Mode or High Priority or Barcoding</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>