force-app/main/default/objects/Contract_Request__c/fields/Free_Inbound_Pages_per_DID__c.field-meta.xml
<CustomField>
    <fullName>Free_Inbound_Pages_per_DID__c</fullName>
    <label>Free Inbound Pages per DID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>