force-app/main/default/objects/Contract_Request__c/fields/Free_Pages_per_DID__c.field-meta.xml
<CustomField>
    <fullName>Free_Pages_per_DID__c</fullName>
    <label>Free Pages per DID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>