force-app/main/default/objects/Contract_Request__c/fields/IS_THIS_A_NAME_CHANGE__c.field-meta.xml
<CustomField>
    <fullName>IS_THIS_A_NAME_CHANGE__c</fullName>
    <label>IS THIS A NAME CHANGE?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>