force-app/main/default/objects/Contract_Request__c/fields/Min_Monthly_Services_Charges__c.field-meta.xml
<CustomField>
    <fullName>Min_Monthly_Services_Charges__c</fullName>
    <label>Min Monthly Services Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>