force-app/main/default/objects/Contract_Request__c/fields/Minimum_1__c.field-meta.xml
<CustomField>
    <fullName>Minimum_1__c</fullName>
    <label>Minimum 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>