force-app/main/default/objects/Contract_Request__c/fields/Minimum_Number_of_DIDS__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Number_of_DIDS__c</fullName>
    <label>Minimum Number of DIDS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>