force-app/main/default/objects/Contract_Request__c/fields/Minimum_Page_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Page_Commitment__c</fullName>
    <label>Minimum Page Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>