force-app/main/default/objects/Contract_Request__c/fields/Month_2__c.field-meta.xml
<CustomField>
    <fullName>Month_2__c</fullName>
    <label>Month 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>