force-app/main/default/objects/Contract_Request__c/fields/Month_3__c.field-meta.xml
<CustomField>
    <fullName>Month_3__c</fullName>
    <label>Month 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>