force-app/main/default/objects/Contract_Request__c/fields/Monthly_Fee_eFax_Secure__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee_eFax_Secure__c</fullName>
    <label>Monthly Fee ES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>