force-app/main/default/objects/Contract_Request__c/fields/Monthly_Fee_Local__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee_Local__c</fullName>
    <label>Monthly Fee Local</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>