force-app/main/default/objects/Contract_Request__c/fields/New_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Name__c</fullName>
    <label>New Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>