force-app/main/default/objects/Contract_Request__c/fields/Old_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Name__c</fullName>
    <label>Old Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>