force-app/main/default/objects/Contract_Request__c/fields/Other_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Other_Commitment__c</fullName>
    <label>Other Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>