force-app/main/default/objects/Contract_Request__c/fields/OTHER_MIN_2__c.field-meta.xml
<CustomField>
    <fullName>OTHER_MIN_2__c</fullName>
    <label>OTHER MIN 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>Minimum DID</fullName>
            </value>
            <value>
                <fullName>Corporate License</fullName>
            </value>
            <value>
                <fullName>Minimum Page</fullName>
            </value>
            <value>
                <fullName>Minimum Monthly</fullName>
            </value>
            <value>
                <fullName>Send Only Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>