force-app/main/default/objects/Contract_Request__c/fields/Other_Term_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Other_Term_of_Contract__c</fullName>
    <label>Other - Term of Contract</label>
    <length>20</length>
    <type>Text</type>
</CustomField>