force-app/main/default/objects/Contract_Request__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>Contract Request Owner Role to use in workflow to trigger Outbound Message</description>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>