force-app/main/default/objects/Contract_Request__c/fields/Per_Page__c.field-meta.xml
<CustomField>
    <fullName>Per_Page__c</fullName>
    <label>Per Page</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>