force-app/main/default/objects/Contract_Request__c/fields/Per_Page_Sending__c.field-meta.xml
<CustomField>
    <fullName>Per_Page_Sending__c</fullName>
    <description>SFSD-1271: changed from Currency(15, 3) to Currency(14, 4) on Oct 29 2019</description>
    <label>Per Page Sending</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>