force-app/main/default/objects/Contract_Request__c/fields/Renewal_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term_Length__c</fullName>
    <label>Renewal Term Length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equal</fullName>
                <default>true</default>
                <label>Equal</label>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>