force-app/main/default/objects/Contract_Request__c/fields/Setup_Fee_Domain_Send__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Domain_Send__c</fullName>
    <label>Setup Fee DS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>