force-app/main/default/objects/Contract_Request__c/fields/Special_Porting_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Porting_Requirements__c</fullName>
    <label>Special Porting Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>