force-app/main/default/objects/Contract_Request__c/fields/State_or_Non_US_Country_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>State_or_Non_US_Country_of_Incorporation__c</fullName>
    <label>State or Non-US Country of Incorporation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>