force-app/main/default/objects/Contract_Request__c/fields/Term_of_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Amendment__c</fullName>
    <label>Term of Amendment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>