force-app/main/default/objects/Contract_Request__c/fields/Term_of_Amendment_Units__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Amendment_Units__c</fullName>
    <label>Term of Amendment Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month(s)</fullName>
                <default>true</default>
                <label>Month(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>