force-app/main/default/objects/Contract_Request__c/fields/Term_of_Autorenewal__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Autorenewal__c</fullName>
    <label>Term of Autorenewal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Equal</fullName>
                <default>true</default>
                <label>Equal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>